# speech-to-text-tf

./: Jenkinsfile  README.md  metadata.json  requirements.txt  setup.cfg
docs/: Makefile  conf.py  make.bat
etc/: config.yaml
speechclas/: api.py  config.py  data_utils.py  freeze.py  freeze.py.backup  model_utils.py  outputtf.txt  paths.py  prueba.py  test_utils.py  train_runfile.py  train_runfile.py.save  utils.py
speechclas/checkpoints/: conv.pbtxt
